WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278128
Assert Lockdown Mode flag has been set before queried
https://bugs.webkit.org/show_bug.cgi?id=278128
Summary
Assert Lockdown Mode flag has been set before queried
Per Arne Vollan
Reported
2024-08-14 15:37:05 PDT
Assert Lockdown Mode flag has been set before queried in the WebContent process.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-14 15:37:15 PDT
<
rdar://problem/133884110
>
Per Arne Vollan
Comment 2
2024-08-14 15:38:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32215
EWS
Comment 3
2024-08-16 12:47:52 PDT
Committed
282363@main
(15c0e5d73bca): <
https://commits.webkit.org/282363@main
> Reviewed commits have been landed. Closing PR #32215 and removing active labels.
WebKit Commit Bot
Comment 4
2024-08-19 16:19:55 PDT
Re-opened since this is blocked by
bug 278358
Per Arne Vollan
Comment 5
2024-08-19 21:01:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32441
EWS
Comment 6
2024-08-21 09:36:18 PDT
Committed
282562@main
(3357b1f7da58): <
https://commits.webkit.org/282562@main
> Reviewed commits have been landed. Closing PR #32441 and removing active labels.
EWS
Comment 7
2024-08-22 11:21:53 PDT
Committed
280938.257@safari-7619-branch
(2a1ad88a9e89): <
https://commits.webkit.org/280938.257@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1627 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug