Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.h
@@ -88,48 +88,13 @@ void initializeAuxiliaryProcess(AuxiliaryProcessInitializationParameters&& param
 void setOSTransaction(OSObjectPtr<os_transaction_t>&&);
 #endif
 
+enum class EnableLockdownMode: bool { No, Yes };
+
+void setJSCOptions(xpc_object_t initializerMessage, EnableLockdownMode);
+
 template<typename XPCServiceType, typename XPCServiceInitializerDelegateType>
 void XPCServiceInitializer(OSObjectPtr<xpc_connection_t> connection, xpc_object_t initializerMessage)
 {
-    if (initializerMessage) {
-        bool optionsChanged = false;
-        if (xpc_dictionary_get_bool(initializerMessage, "configure-jsc-for-testing"))
-            JSC::Config::configureForTesting();
-        if (xpc_dictionary_get_bool(initializerMessage, "enable-captive-portal-mode")) {
-            JSC::Options::initialize();
-            JSC::Options::AllowUnfinalizedAccessScope scope;
-            JSC::ExecutableAllocator::disableJIT();
-            JSC::Options::useGenerationalGC() = false;
-            JSC::Options::useConcurrentGC() = false;
-            JSC::Options::useLLIntICs() = false;
-            JSC::Options::useWasm() = false;
-            JSC::Options::useZombieMode() = true;
-            JSC::Options::allowDoubleShape() = false;
-            JSC::Options::alwaysHaveABadTime() = true;
-            optionsChanged = true;
-        } else if (xpc_dictionary_get_bool(initializerMessage, "disable-jit")) {
-            JSC::Options::initialize();
-            JSC::Options::AllowUnfinalizedAccessScope scope;
-            JSC::ExecutableAllocator::disableJIT();
-            optionsChanged = true;
-        }
-        if (xpc_dictionary_get_bool(initializerMessage, "enable-shared-array-buffer")) {
-            JSC::Options::initialize();
-            JSC::Options::AllowUnfinalizedAccessScope scope;
-            JSC::Options::useSharedArrayBuffer() = true;
-            optionsChanged = true;
-        }
-        // FIXME (276012): Remove this XPC bootstrap message when it's no longer necessary. See rdar://130669638 for more context.
-        if (xpc_dictionary_get_bool(initializerMessage, "disable-jit-cage")) {
-            JSC::Options::initialize();
-            JSC::Options::AllowUnfinalizedAccessScope scope;
-            JSC::Options::useJITCage() = false;
-            optionsChanged = true;
-        }
-        if (optionsChanged)
-            JSC::Options::notifyOptionsChanged();
-    }
-
     XPCServiceInitializerDelegateType delegate(WTFMove(connection), initializerMessage);
 
     // We don't want XPC to be in charge of whether the process should be terminated or not,
@@ -177,6 +142,11 @@ void XPCServiceInitializer(OSObjectPtr<xpc_connection_t> connection, xpc_object_
 #endif
 
     parameters.processType = XPCServiceType::processType;
+
+    if (initializerMessage) {
+        bool enableLockdownMode = parameters.extraInitializationData.get<HashTranslatorASCIILiteral>("enable-lockdown-mode"_s) == "1"_s;
+        setJSCOptions(initializerMessage, enableLockdownMode ? EnableLockdownMode::Yes : EnableLockdownMode::No);
+    }
 
     initializeAuxiliaryProcess<XPCServiceType>(WTFMove(parameters));
 }
